using System.Collections;
using System.Collections.Generic;
using UnityEngine;

//cache string
public class Constant 
{
    public const string Anim_idle = "idle";
    public const string Anim_run = "run";
    public const string Anim_attack = "attack";
    public const string Anim_ulti = "ulti";
    public const string Anim_win = "win";
    public const string Anim_dance = "dance";
    public const string Anim_dead = "dead";

    public const string Tag_character = "Character";

}
